--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Port
-server.port=8080
+server.port=9091
 #
 # Thymeleaf
 spring.thymeleaf.cache=false
@@ -16,8 +16,10 @@ spring.datasource.username=${MARATHON_SQL_USER}
 spring.datasource.password=${MARATHON_SQL_PASSWORD}
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
+spring.security.user.name=user@gmail.com
+spring.security.user.password=user
 
 logging.file.path=./
 logging.file.name=myApp.log
